# OptimaKmeans

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Readme.md  autotune.c  main.c  main_cpu.c  main_gpu.c  plot_results.py  results_gpu_base.csv  results_gpu_warp.csv  results_gpu_warpmem.csv  run.sh  run_cpu.sh  run_gpu.sh  time_plot.py  time_plot_3V.py  time_plot_gpu.py
baseline_sklearn/: kmeans_base.py  run_py.sh
dataset/: data_download.py  data_preprocess.py  download_path.json  feature_extract.py
include/OptimaKmeans/: optima_kmeans.h  optima_kmeans_cpu.h  optima_kmeans_gpu.h
scripts/: autotune_probe.json  benchmark.py
src/: CMakeLists.txt  dataloader.c  dataloader.h  kmeans.c  kmeans.h  optima_kmeans.c
src/cpu_implementation/: CMakeLists.txt  dataloader.c  dataloader.h  kmeans.h  kmeans_v1.c  kmeans_v2.c  kmeans_v3.c  optima_kmeans.c
src/gpu_implementation/: CMakeLists.txt  dataloader.c  kmeans.c  kmeans.h  kmeans_gpu.cu  kmeans_gpu.h  kmeans_gpu_base.cu  kmeans_gpu_test2.cu  kmeans_gpu_test3.cu  kmeans_gpu_warp.cu  kmeans_gpu_warpmem.cu  kmeans_gpu_warpmemfound.cu  optima_kmeans.c
