if(NOT DEFINED GPU_VERSION)
    set(GPU_VERSION "warp")
endif()

if(GPU_VERSION STREQUAL "base")
    set(GPU_SRC kmeans_gpu_base.cu)
elseif(GPU_VERSION STREQUAL "warp")
    set(GPU_SRC kmeans_gpu_warp.cu)
elseif(GPU_VERSION STREQUAL "warpmem")
    set(GPU_SRC kmeans_gpu_warpmem.cu)
elseif(GPU_VERSION STREQUAL "warpmemfound")
    set(GPU_SRC kmeans_gpu_warpmemfound.cu)
elseif(GPU_VERSION STREQUAL "atomicshare")
    set(GPU_SRC kmeans_gpu_atomicshare.cu)
elseif(GPU_VERSION STREQUAL "test2")
    set(GPU_SRC kmeans_gpu_test2.cu)
else()
    message(FATAL_ERROR "Unknown GPU_VERSION: ${GPU_VERSION} (expected base|warp|warpmem|warpmemfound|atomicshare|test2)")
endif()

message(STATUS "Building GPU version: ${GPU_VERSION} (${GPU_SRC})")

add_library(optima_kmeans optima_kmeans.c dataloader.c kmeans.c ${GPU_SRC})
target_include_directories(optima_kmeans PUBLIC ${CMAKE_SOURCE_DIR}/include)
