if(G_version STREQUAL "base")
    set(G_src kmeans_gpu_base.cu)
elseif(G_version STREQUAL "warp")
    set(G_src kmeans_gpu_warp.cu)
elseif(G_version STREQUAL "warpmem")
    set(G_src kmeans_gpu_warpmem.cu)
elseif(G_version STREQUAL "warpmemfound")
    set(G_src kmeans_gpu_warpmemfound.cu)
elseif(G_version STREQUAL "atomicshare")
    set(G_src kmeans_gpu_atomicshare.cu)
elseif(G_version STREQUAL "test2")
    set(G_src kmeans_gpu_test2.cu)
elseif(G_version STREQUAL "test3")
    set(G_src kmeans_gpu_test3.cu)
endif()

add_library(optima_kmeans optima_kmeans.c dataloader.c kmeans.c ${G_src})
target_include_directories(optima_kmeans PUBLIC ${CMAKE_SOURCE_DIR}/include)
